[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/felpudo/felpudoVoa3.png" type="Texture" id=1]
[ext_resource path="res://assets/felpudo/felpudoVoa1.png" type="Texture" id=2]
[ext_resource path="res://assets/felpudo/felpudoVoa6.png" type="Texture" id=3]
[ext_resource path="res://assets/felpudo/felpudoVoa2.png" type="Texture" id=4]
[ext_resource path="res://assets/felpudo/felpudoVoa5.png" type="Texture" id=5]
[ext_resource path="res://assets/felpudo/felpudoVoa4.png" type="Texture" id=6]
[ext_resource path="res://scenes/script/RigidBody2D.gd" type="Script" id=7]
[ext_resource path="res://assets/fundo.png" type="Texture" id=8]
[ext_resource path="res://scenes/canos.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/script/geredor.gd" type="Script" id=10]
[ext_resource path="res://scenes/script/game.gd" type="Script" id=11]
[ext_resource path="res://assets/font.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://sound/somHit.ogg" type="AudioStream" id=13]
[ext_resource path="res://sound/somScore.ogg" type="AudioStream" id=14]
[ext_resource path="res://sound/somVoa.ogg" type="AudioStream" id=15]

[sub_resource type="Animation" id=1]
resource_name = "Nova Animação"
length = 3.0
loop = true
step = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1026, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/Sprite2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1026, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 100.393

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 0.730347, -0.223717 )
b = Vector2( 1003.2, -0.477783 )

[sub_resource type="DynamicFont" id=5]
size = 160
font_data = ExtResource( 12 )

[node name="GameNode" type="Node2D"]
position = Vector2( 186.773, 831.848 )
script = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Nova Animação"
"anims/Nova Animação" = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 2.80824, -6.50708 )
scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 8 )
centered = false

[node name="Sprite2" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 1028.81, -6.50708 )
scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 8 )
centered = false

[node name="Pasaro" type="RigidBody2D" parent="."]
z_index = 1
mode = 2
gravity_scale = 18.0
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Pasaro"]
position = Vector2( -2.93628, 0 )
scale = Vector2( 1.4, 1.4 )
frames = SubResource( 2 )
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pasaro"]
position = Vector2( -0.463287, -0.463318 )
shape = SubResource( 3 )

[node name="SomVoa" type="AudioStreamPlayer" parent="Pasaro"]
stream = ExtResource( 15 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -187.368, -831.684 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -189.77, 867.384 )
shape = SubResource( 4 )

[node name="Node2D2" type="Node2D" parent="."]
z_index = 2

[node name="Node2D" parent="Node2D2" instance=ExtResource( 9 )]
position = Vector2( 972.689, -25.8098 )
z_index = 2
z_as_relative = false

[node name="Position2D" type="Position2D" parent="Node2D2"]
position = Vector2( 972.061, -27.2723 )
script = ExtResource( 10 )

[node name="Timer" type="Timer" parent="Node2D2/Position2D"]
wait_time = 3.0
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Node2D" type="Node2D" parent="."]
z_index = 3
z_as_relative = false

[node name="Control" type="Control" parent="Node2D"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Node2D/Control"]
margin_left = -182.0
margin_top = -752.0
margin_right = 815.0
margin_bottom = -559.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SomScore" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="SomHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
[connection signal="timeout" from="Node2D2/Position2D/Timer" to="Node2D2/Position2D" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
